syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "SetValueOperationDescriptorType";

import "sdc/biceps/abstractoperationdescriptor.proto";

message SetValueOperationDescriptor {
  AbstractOperationDescriptor abstract_operation_descriptor = 1;
}
